--- a/pages/betular.html
+++ b/pages/betular.html
@@ -10,39 +10,37 @@
     <title>TryIt! - Betular</title>
 </head>
 <body>
-    <header class="sticky-top" style="background-color:white">
-        <div class="row align-items-end">
-            <div class="col-4">
-              <!--Nav-------------------------------------------------------------------------->
-                <nav class="navbar navbar-expand-lg navbar-light" >				
-                    <div class="container-fluid">
-                      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                      </button>
-                      <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                          <li class="nav-item">
-                            <a class="nav-link text-link"; aria-current="page" href="../index.html">Home</a>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link text-link" href="joinus.html">Want to join us?</a>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link text-link" href="aboutus.html">About us</a>
-                          </li>
-                        </ul>
-                      </div>
-                    </div>
-                </nav>
-            </div>
-            <div class="col-4 justify-content-center">
-              <!--Logo-------------------------------------------------------------------------->
-              <h1 class="text-center"><a class="logo" href="../index.html">TryIt!</a></h1>
-            </div>
-          </div>
-      </div>
-	<hr>
-    </header>
+  <header class="sticky-top" style="background-color:white">
+    <!--Logo-------------------------------------------------------------------------->
+   <div class="col-12 justify-content-center">
+     <h1 class="text-center"><a class="logo" href="../index.html">TryIt!</a></h1>
+   </div>
+ 
+   <!--Nav-------------------------------------------------------------------------->
+   <div class="col-12 col-md-4">
+             <nav class="navbar navbar-expand-lg navbar-light" >				
+                 <div class="container-fluid">
+                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                     <span class="navbar-toggler-icon"></span>
+                   </button>
+                   <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                     <ul class="navbar-nav me-auto mb-1 mb-lg-0">
+                       <li class="nav-item">
+                         <a class="nav-link text-link" href="../index.html">Home</a>
+                       </li>
+                       <li class="nav-item">
+                         <a class="nav-link text-link" href="joinus.html">Want to join us?</a>
+                       </li>
+                       <li class="nav-item">
+                         <a class="nav-link text-link" href="aboutus.html">About us</a>
+                       </li>
+                     </ul>
+                   </div>
+                 </div>
+             </nav>
+         </div>
+ <hr>
+ </header>
     <main>
         <div class="container-fluid">
             <div class="row">
@@ -93,6 +91,6 @@
         <hr>
 		<a class="text-link m-3" href="contact.html">Contact us</a>
     </footer>
-<script src="assets/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
