--- a/index.html
+++ b/index.html
@@ -11,14 +11,10 @@
 </head>
 <body>
     <header class="sticky-top" style="background-color:white">
-       <!--Logo-------------------------------------------------------------------------->
-      <div class="col-12 justify-content-center">
-        <h1 class="text-center"><a class="logo" href="index.html">TryIt!</a></h1>
-      </div>
-    
       <!--Nav-------------------------------------------------------------------------->
-      <div class="col-12 col-md-4">
-                <nav class="navbar navbar-expand-lg navbar-light" >				
+      <div class="row">
+        <div class="col-4 col-md-5 m-0 d-flex align-items-start align-items-lg-end">
+                <nav class="navbar navbar-expand-lg navbar-light m-0" >				
                     <div class="container-fluid">
                       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -38,7 +34,12 @@
                       </div>
                     </div>
                 </nav>
-            </div>
+          </div>
+       <!--Logo-------------------------------------------------------------------------->
+        <div class="col-4 col-md-3 justify-content-center m-0">
+          <h1 class="text-center m-0"><a class="logo" href="index.html">TryIt!</a></h1>
+        </div>
+      </div>
 	  <hr>
     </header>
     <main>
@@ -57,19 +58,7 @@
                         <li class="nav-item">
                           <a class="nav-link active text-link" aria-current="page" href="pages/cooking.html">Cooking</a>
                         </li>
-                        <li class="nav-item">
-                          <a class="nav-link text-link" href="#">Crafts</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link text-link" href="#">Photography</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link text-link" href="#">Sports</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-link" href="#">Try something random</a>
-                          </li>
-                      </ul>   
+                    </ul>   
                 </div>
               <!--Picture---------------------->
                 <div class="col-sm-8 col-md-8 col-lg-10 ">
