--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -11,36 +11,37 @@
 </head>
 <body>
   <header class="sticky-top" style="background-color:white">
-    <!--Logo-------------------------------------------------------------------------->
-   <div class="col-12 justify-content-center">
-     <h1 class="text-center"><a class="logo" href="../index.html">TryIt!</a></h1>
-   </div>
- 
-   <!--Nav-------------------------------------------------------------------------->
-   <div class="col-12 col-md-4">
-             <nav class="navbar navbar-expand-lg navbar-light" >				
-                 <div class="container-fluid">
-                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-                     <span class="navbar-toggler-icon"></span>
-                   </button>
-                   <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-                     <ul class="navbar-nav me-auto mb-1 mb-lg-0">
-                       <li class="nav-item">
-                         <a class="nav-link text-link" href="../index.html">Home</a>
-                       </li>
-                       <li class="nav-item">
-                         <a class="nav-link text-link" href="joinus.html">Want to join us?</a>
-                       </li>
-                       <li class="nav-item">
-                         <a class="nav-link text-link" href="aboutus.html">About us</a>
-                       </li>
-                     </ul>
-                   </div>
-                 </div>
-             </nav>
-         </div>
- <hr>
- </header>
+    <!--Nav-------------------------------------------------------------------------->
+    <div class="row">
+      <div class="col-4 col-md-5 m-0 d-flex align-items-start align-items-lg-end">
+              <nav class="navbar navbar-expand-lg navbar-light m-0" >				
+                  <div class="container-fluid">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                      <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                      <ul class="navbar-nav me-auto mb-1 mb-lg-0">
+                        <li class="nav-item">
+                          <a class="nav-link text-link" href="../index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link text-link" href="joinus.html">Want to join us?</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link text-link" href="aboutus.html">About us</a>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+              </nav>
+        </div>
+     <!--Logo-------------------------------------------------------------------------->
+      <div class="col-4 col-md-3 justify-content-center m-0">
+        <h1 class="text-center m-0"><a class="logo" href="../index.html">TryIt!</a></h1>
+      </div>
+    </div>
+  <hr>
+  </header>
     <main>
         <div class="container-fluid">
             <div class="row">
@@ -50,31 +51,19 @@
                         <li class="nav-item">
                           <a class="nav-link active text-link" aria-current="page" href="cooking.html">Cooking</a>
                         </li>
-                        <li class="nav-item">
-                          <a class="nav-link text-link" href="#">Crafts</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link text-link" href="#">Photography</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link text-link" href="#">Sports</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-link" href="#">Try something random</a>
-                          </li>
-                      </ul>   
+                    </ul>   
                 </div>
-                <div class="col-sm-7 col-lg-9">
+                <div class="col-sm-8 col-md-9 col-lg-10">
                         <div class="row m-2">
                             <h2 class="h1">About us</h2>
                         </div>
                         <div class="row">
-                            <div class="col-lg-6 col-sm-8">
+                            <div class="col-12 col-lg-6">
                                 <p class="h3 text-justify p-2">We are a <span class="font-weight-bold">community of people</span> who loves trying new things!</p>
                                 <p class="h3 text-justify p-2"><span class="font-weight-bold">TryIt</span> is a platform that connects people excited about offering and trying new experiences. We believe that learning new things helps keeping the brain young and active.</p> 
                                 <p class="h3 text-justify p-2">TryIt offers the <span class="font-weight-bold">lowest rates</span> for first sessions, incentivizing people to try new experiences and increasing customer base for those offering the service.</p>   
 			                </div>
-                            <div class="col-lg-5 col-sm-8">
+                            <div class="col-10 col-lg-5">
                                 <img src="https://st3.depositphotos.com/9880800/15095/i/950/depositphotos_150957342-stock-photo-people-having-fun-at-home.jpg" class="img-fluid" alt="people">
                             </div>
                         </div>
