--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@
                         <li class="nav-item">
                           <a class="nav-link active text-link" aria-current="page" href="pages/cooking.html">Cooking</a>
                         </li>
+                        <li class="nav-item">
+                          <a class="nav-link active text-link" aria-current="page" href="pages/crafts.html">Crafts</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link active text-link" aria-current="page" href="pages/sports.html">Sports</a>
+                        </li>
                     </ul>   
                 </div>
               <!--Picture---------------------->
