--- a/pages/jimena.html
+++ b/pages/jimena.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="experience community try connect meet people learn">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
 	<link rel="stylesheet" href="../css/destino.css"/>
-    <title>TryIt! - About us</title>
+    <title>TryIt! - Jimena</title>
 </head>
 <body>
   <header class="sticky-top" style="background-color:white">
@@ -59,19 +59,22 @@
                     </li>
                     </ul>   
                 </div>
-                <div class="col-sm-8 col-md-9 col-lg-10">
-                        <div class="row m-2">
-                            <h2 class="h1">About us</h2>
-                        </div>
-                        <div class="row justify-content-center">
-                            <div class="col-12 col-lg-6">
-                                <p class="h3 text-justify p-2">We are a <span class="font-weight-bold">community of people</span> who loves trying new things!</p>
-                                <p class="h3 text-justify p-2"><span class="font-weight-bold">TryIt</span> is a platform that connects people excited about offering and trying new experiences. We believe that learning new things helps keeping the brain young and active.</p> 
-                                <p class="h3 text-justify p-2">TryIt offers the <span class="font-weight-bold">lowest rates</span> for first sessions, incentivizing people to try new experiences and increasing customer base for those offering the service.</p>   
-			                      </div>
-                            <div class="col-12 col-lg-6">
-                                <img src="https://st3.depositphotos.com/9880800/15095/i/950/depositphotos_150957342-stock-photo-people-having-fun-at-home.jpg" class="img-fluid" alt="people">
+                <div class="col-sm-8 col-lg-10">
+                  <!--Option selected-------------------------------------------------------------------------->        
+                        <h3 class="m-2 h1"><a href="crafts.html">Crafts</a> - Learn paint with Jimena</h3>
+                        <div class="row">
+                            <div class="col-12 col-lg-6 d-flex justify-content-center">
+			                    <img  src="https://images.squarespace-cdn.com/content/v1/56943e48a2bab8c9489aa6bc/1453574278626-6G8E45ISFP14XOJVYX06/dsc09031.jpg?format=1000w" width="90%" height="90%" alt="paint">
                             </div>
+                            <div class="col-12 col-lg-5">
+                                <p class="h5 text-justify text-wrap p-2">Jimena Ashley has a BS in Art Education from the University of Vermont and an MA in Art Business from Sotheby's Institute of Art. After a brief stint working in the art world as an art advisor and creative program manager, Jimena has returned to her first love - teaching. . </p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12 col-lg-8" style="height:300px">
+                                <h3>Location</h3>
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.797702596504!2d-58.39519308446283!3d-34.58398496396188!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccaa199c2f643%3A0x49e543b8331abe7d!2sMuseo%20Nacional%20de%20Bellas%20Artes!5e0!3m2!1sen!2sus!4v1652403440507!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                              </div>    
                         </div>
                 </div>
             </div>
