--- a/pages/joinus.html
+++ b/pages/joinus.html
@@ -49,22 +49,28 @@
                 <div class="col-sm-4 col-md-3 col-lg-2 side-menu">
                     <!--Side menu-------------------------------------------------------------------------->
                     <ul class="nav flex-column">
-                        <li class="nav-item">
-                          <a class="nav-link active text-link" aria-current="page" href="cooking.html">Cooking</a>
-                        </li>
+                      <li class="nav-item">
+                        <a class="nav-link active text-link" aria-current="page" href="cooking.html">Cooking</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active text-link" aria-current="page" href="crafts.html">Crafts</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link active text-link" aria-current="page" href="sports.html">Sports</a>
+                    </li>
                     </ul>   
                 </div>
                 <div class="col-sm-8 col-lg-9">
                         <div class="row m-2">
                             <h2 class="h1">Join us!</h2>
                         </div>
-                        <div class="row">
+                        <div class="row justify-content-center">
                             <!--Forms-------------------------------------------------------------------------->
-                            <div class="col-lg-6 col-10 align-content-center">
+                            <div class="col-lg-6 col-10">
                                 <p class="h3 text-justify p-2">Join our community and start offering experiences!</p> 
                                 <div class="col-12 image-gif-joinus"></div>    
 			                      </div>
-                             <div class="col-lg-5 col-10">
+                             <div class="col-lg-6 col-10 p-3">
                                 <div class="mb-3 h5">
                                     <label for="exampleFormControlInput1" class="form-label">Email address</label>
                                     <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
