--- a/pages/betular.html
+++ b/pages/betular.html
@@ -48,9 +48,15 @@
                 <div class="col-sm-4 col-md-3 col-lg-2 side-menu">
                   <!--Side menu-------------------------------------------------------------------------->
                     <ul class="nav flex-column">
-                        <li class="nav-item">
-                          <a class="nav-link active text-link" aria-current="page" href="cooking.html">Cooking</a>
-                        </li>
+                      <li class="nav-item">
+                        <a class="nav-link active text-link" aria-current="page" href="cooking.html">Cooking</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active text-link" aria-current="page" href="crafts.html">Crafts</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link active text-link" aria-current="page" href="sports.html">Sports</a>
+                    </li>
                     </ul>   
                 </div>
                 <div class="col-sm-8 col-lg-10">
