--- a/pages/contact.html
+++ b/pages/contact.html
@@ -48,19 +48,25 @@
                 <div class="col-sm-4 col-md-3 col-lg-2 side-menu">
                   <!--Side menu-------------------------------------------------------------------------->
                     <ul class="nav flex-column">
-                        <li class="nav-item">
-                          <a class="nav-link active text-link" aria-current="page" href="cooking.html">Cooking</a>
-                        </li>
+                      <li class="nav-item">
+                        <a class="nav-link active text-link" aria-current="page" href="cooking.html">Cooking</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active text-link" aria-current="page" href="crafts.html">Crafts</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link active text-link" aria-current="page" href="sports.html">Sports</a>
+                    </li>
                     </ul>   
                 </div>
                 <div class="col-sm-8 col-lg-10">
                         <div class="row m-2">
                             <h2 class="h1">Contact us</h2>
                         </div>
-                        <div class="row">
-                            <div class="col-lg-6 col-12">
+                        <div class="row justify-content-center">
+                            <div class="col-lg-6 col-10">
                                 <p class="h3 text-justify p-2">We are here to help! Please reach out and will get back to you in shortly.</p>  
-                                <div class="row col-12 image-gif-contact"></div>  
+                                <div class="row col-10 image-gif-contact"></div>  
 			                      </div>
                             <div class="col-lg-5 col-10">
                               <!--Forms-------------------------------------------------------------------------->
