--- a/pages/jimena.html
+++ b/pages/jimena.html
@@ -73,7 +73,7 @@
                         <div class="row">
                             <div class="col-12 col-lg-8" style="height:300px">
                                 <h3>Location</h3>
-                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.797702596504!2d-58.39519308446283!3d-34.58398496396188!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccaa199c2f643%3A0x49e543b8331abe7d!2sMuseo%20Nacional%20de%20Bellas%20Artes!5e0!3m2!1sen!2sus!4v1652403440507!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.797702596504!2d-58.39519308446283!3d-34.58398496396188!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccaa199c2f643%3A0x49e543b8331abe7d!2sMuseo%20Nacional%20de%20Bellas%20Artes!5e0!3m2!1sen!2sus!4v1652403440507!5m2!1sen!2sus" width="90%" height="80%"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                               </div>    
                         </div>
                 </div>
