--- a/pages/cooking.html
+++ b/pages/cooking.html
@@ -47,7 +47,7 @@
         <div class="container-fluid">
             <div class="row">
                 <!--Side Menu-------------------------------------------------------------------------->
-                <div class="col-sm-4 col-md-3 col-lg-2 side-menu">
+                <div class="col-12 col-sm-4 col-md-3 col-lg-2 side-menu">
                     <ul class="nav flex-column">
                       <li class="nav-item">
                         <a class="nav-link active text-link" aria-current="page" href="cooking.html">Cooking</a>
@@ -60,7 +60,7 @@
                       </li>
                     </ul>   
                 </div>
-                <div class="col-12 col-sm-8 col-lg-10">
+                <div class="col-12 col-sm-8 col-md-9 col-lg-10">
                     <div class="container">
                       <div class="row justify-content-center justify-content-md-start">
                         <h2 class="h1 m-2">Cooking</h2>
@@ -105,6 +105,7 @@
     <footer>
         <hr>
 		<a class="text-link m-3" href="contact.html">Contact us</a>
+    <h5 class="ml-3">Developed by Melmac ©</h3>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
