--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
     </main>
     <footer>
         <hr>
-		<a class="text-link m-3" href="pages/contact.html">Contact us</a>
+		<a class="text-link ml-3" href="pages/contact.html">Contact us</a>
+    <h5 class="ml-3">Developed by Melmac ©</h5>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
